Path can be read, and fixed movement